agent: Allow building under Cygwin.

* agent/command-ssh.c (start_command_handler_ssh): Firther protect the
SOCKET cast.
--

Note that Cygwin is not supported, YMMV.
GnuPG-bug-id: 7667